--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,9 @@
 /* цвет текста 3 #757575 */
 /* цвет фона #E5E5E5 */
 /* цвет фона вторичный #F5F4FA */
-/* цыет футера #2F303A */
+/* цвет футера #2F303A */
+/* цвет фото кнопок клиентов #AFB1B8 */
+
 
 /* Можно сделать отдельно шрифты для заголовков. Пример ниже */
 /* h1,h2,h3,h4,h5,h6 {
@@ -31,6 +33,7 @@ Roboto bold, regular*/
   --footer-color: #2F303A;
   --secondary-background-and-button-color: #F5F4FA;
   --fone-color: #E5E5E5;
+  --clients-link-color: #AFB1B8;
 }
 
 h1,
@@ -481,7 +484,7 @@ background-position: center;
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 28px;
+  margin-bottom: 16px;
 }
 
 .team-member {
@@ -522,16 +525,41 @@ background-position: center;
     margin-right: 0;
   }
 
-  .sn-element::before {
+  .link-instagram {
+    width: 44px;
+    height: 44px;
+    display: flex;
+    background-color: greenyellow;
+    border-radius: 50px;
+
+    align-items: center;
+    justify-content: center;
+  }
+
+  .icon-twitter,
+  .icon-instagram,
+  .icon-facebook,
+  .icon-linkedin {
+    width: 20px;
+    height: 20px;
+    fill: var(--clients-link-color);
+  }
+
+  .icon-twitter.link:hover,
+  .icon-twitter.link:focus {
+    background-color: var(--accent-color);
+  }
+
+  /* .sn-element::before {
     content: "";
 
     display: inline-block;
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-  }
+  } */
 
-  .icon-instagram::before {
+  /* .icon-instagram::before {
     content: "";
     display: inline-block;
     height: 20px;
@@ -561,7 +589,7 @@ background-position: center;
     height: 20px;
     width: 20px;
     background-image: url('../images/linkedin.svg');
-    }
+    } */
 
   .marta-networks {
     display: flex;
@@ -624,7 +652,8 @@ background-position: center;
 }
 
 .clients-card {
-  background-color: var(--header-and-text-color);
+  display: flex;
+  /* background-color: var(--header-and-text-color); */
   box-sizing: border-box;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
@@ -632,15 +661,106 @@ background-position: center;
   height: 90px;
 }
 
+.clients-card:hover,
+.clients-card:focus {
+  /* border-color: var(--accent-color); */
+  border: 3px solid var(--accent-color);
+}
 
-.clients-card::before {
+/* .link-companytaglinehere:hover,
+.link-companytaglinehere:focus {
+  border: 3px solid var(--accent-color);
+} */
+
+.icon-yaco {
+  padding: 20px 63px;
+  width: 49.23px;
+  height: 44.27px;
+  fill: var(--clients-link-color);
+}
+
+.icon-yaco:hover,
+.icon-yaco:focus {
+  fill: var(--accent-color);
+}
+
+.clients-card-test {
+  display: flex;
+
+  box-sizing: border-box;
+  border: 1px solid #AFB1B8;
+  border-radius: 4px;
+  width: 170px;
+  height: 90px;
+
+  align-items: center;
+  justify-content: center;
+}
+
+.clients-card-test:hover,
+.clients-card-test:focus {
+  border: 3px solid var(--accent-color);
+}
+
+.icon-companytaglinehere:hover,
+.icon-companytaglinehere:focus {
+  fill: var(--accent-color);
+}
+
+.icon-companytaglinehere {
+  width: 40px;
+  height: 52px;
+  }
+
+/* 3 тестовая часть  */
+
+.clients-card-test1 {
+  display: flex;
+  width: 170px;
+  height: 90px;
+  box-sizing: border-box;
+  border: 1px solid var(--clients-link-color);
+  border-radius: 4px;
+  fill: var(--clients-link-color);
+
+  align-items: center;
+  justify-content: center;
+}
+
+.clients-card-test1:hover,
+.clients-card-test1:focus {
+  border: 1px solid var(--accent-color);
+  fill: var(--accent-color);
+}
+
+.icon-company {
+  width: 41px;
+  height: 42.6px;
+  }
+
+/* .icon-company:hover,
+.icon-company:focus {
+  fill: var(--accent-color);
+} */
+
+/* .link-company {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  fill: inherit;
+} */
+
+
+/* .clients-card::before {
   background-position: center;
   content: "";
   display: block;
   background-repeat: no-repeat;
-  }
+  } */
 
-  .icon-ya_co::before {
+  /* .icon-ya_co::before {
   display: block;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -653,9 +773,9 @@ background-position: center;
   width: 49px;
   content: "";
   background-image: url('../images/ya&co.svg');
-  }
+  } */
 
-.icon-companytaglinehere::before {
+/* .icon-companytaglinehere::before {
   display: block;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -668,9 +788,9 @@ background-position: center;
   width: 52px;
   content: "";
   background-image: url('../images/company_tag_line2.svg');
-}
+} */
 
-.icon-company::before {
+/* .icon-company::before {
   display: block;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -683,7 +803,7 @@ background-position: center;
   width: 42px;
   content: "";
   background-image: url('../images/company.svg');
-}
+} */
 
 .icon-foster_peters::before {
   display: block;
